@@ -1,2 +1,25 @@
 # java-features
 java jdk update-features
+
+### Java 8 features
+
+
+
+
+### Java 15 features
+##### 密封类
+- sealed
+- permits
+- non-sealed
+
+##### Hidden Class (隐藏类)
+
+##### instanceof模式匹配
+- 查看InstanceofDemo类
+
+##### ZGC垃圾回收器
+- `-XX:+UseZGC`
+
+##### 文本块
+
+##### Records
